# aiops-anomaly-detection

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/api/: models.py
app/api/endpoints/: detect.py  health.py  methods.py
app/core/: config.py  logging.py
app/db/: models.py  session.py
app/detection/: advanced.py  baseline.py  engine.py  ml_detectors.py
scripts/: example_usage.py  generate_synthetic_data.py  load_dataset.py
templates/: dashboard.html
tests/: conftest.py  test_api.py  test_detection.py
