[project]
name = "aiops-anomaly-detection"
version = "0.1.0"
description = "Mini AIOps: Detecção de anomalias em métricas de infraestrutura"
authors = [{name = "Gabriel", email = "gabriel@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.2",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "polars>=1.0.0",  # Alternativa ao pandas para melhor compatibilidade
    "numpy>=1.26.4",
    "scikit-learn>=1.5.2",
    "dtaianomaly>=0.2.3",
    "loguru>=0.7.3",
    "structlog>=24.4.0",
    "python-multipart>=0.0.12",
    "python-dateutil>=2.9.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.2",
    "black>=24.0.0",
    "ruff>=0.7.0",
    "pre-commit>=3.0.0",
]
ml = [
    "prophet>=1.1.0",
    "tensorflow>=2.16.0",
]

[project.scripts]
aiops = "app.main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["E501", "F401"]
